--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: true
+          fetch-depth: 1
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: 18
       - uses: Genez-io/genezio-github-action@main
         with:
             token: ${{ secrets.GENEZIO_TOKEN }}
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.120.4'
+          extended: true
       - name: Deploy with genezio
-        run: genezio deploy
+        run: genezio deploy --frontend
