--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
 baseURL: https://andreiaoca.com/
 languageCode: en-us
-title: Andreia Ocanoaia - an engineering blog about the bolts and nits of the cloud.
+title: Andreia Ocanoaia
 theme: "PaperMod"
